...
    final _screenWidth = MediaQuery.of(context).size.width;
    final _statusBarHeight = MediaQuery.of(context).padding.top;
    final _height = _screenHeight - _statusBarHeight - _appBarHeight;
    final radius = min(_height * 0.5 * 0.25, _screenWidth * 0.25);

    return Scaffold(
      key: const Key('bestquiz_page'),
      backgroundColor: Theme.of(context).backgroundColor,
      appBar: _appBar,
      body: FutureBuilder<Quiz>(
          future: getBestQuiz(),
          builder: (BuildContext context, AsyncSnapshot<Quiz> snapshot) {
            if (snapshot.hasData &&
...
